# daintSkeleton

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  helper.h
app/: CMakeLists.txt
app/app1/: CMakeLists.txt  app1.cpp
app/app2/: CMakeLists.txt  app2.cu
cmake/: gen_cppcheck.cmake
mpi/: CMakeLists.txt
mpi/include/: allocator.hpp  cartesian_communicator.hpp  collectives.hpp  collectives_fwd.hpp  datatype.hpp  datatype_fwd.hpp  environment.hpp  exception.hpp  graph_communicator.hpp  group.hpp  inplace.hpp  intercommunicator.hpp  mpi.hpp  nonblocking.hpp  operations.hpp  packed_iarchive.hpp  packed_oarchive.hpp  request.hpp  skeleton_and_content.hpp  status.hpp  timer.hpp
mpi/include/collectives/: all_gather.hpp  all_gatherv.hpp  all_reduce.hpp  all_to_all.hpp  broadcast.hpp  gather.hpp  gatherv.hpp  reduce.hpp  scan.hpp  scatter.hpp  scatterv.hpp
mpi/include/detail/: binary_buffer_iprimitive.hpp  binary_buffer_oprimitive.hpp  content_oarchive.hpp  ignore_iprimitive.hpp  ignore_oprimitive.hpp  mpi_datatype_cache.hpp  mpi_datatype_oarchive.hpp  mpi_datatype_primitive.hpp  offsets.hpp  packed_iprimitive.hpp  packed_oprimitive.hpp  point_to_point.hpp  text_skeleton_oarchive.hpp
mpi/include/python/: config.hpp  serialize.hpp  skeleton_and_content.hpp
mpi/src/: CMakeLists.txt  broadcast.cpp  cartesian_communicator.cpp  communicator.cpp  computation_tree.cpp  content_oarchive.cpp  environment.cpp  exception.cpp  graph_communicator.cpp  group.cpp  intercommunicator.cpp  mpi_datatype_cache.cpp  mpi_datatype_oarchive.cpp  offsets.cpp  packed_iarchive.cpp  packed_oarchive.cpp  packed_skeleton_iarchive.cpp  packed_skeleton_oarchive.cpp  point_to_point.cpp  request.cpp  text_skeleton_oarchive.cpp  timer.cpp
report/: CMakeLists.txt
report/report1/: CMakeLists.txt  biblio.bib  report1.tex
scripts/: CMakeLists.txt  initBuild.sh  launchApp1.sh  launchApp1WithProfiling.sh  launchApp2.sh  launchApp2WithProfiling.sh
src/: CMakeLists.txt  lib.cpp  lib.h
src/Cuda/: helper.cu.h  lib.cu  lib.cu.h
test/: CMakeLists.txt
test/cmake/: libtest.cmake
test/src/: CMakeLists.txt  cudalibtest1.cu  cudalibtest2.cu  libtest1.cpp
